k8s/demo-app/route.yaml
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  name: demo-app
  namespace: demo-app
  labels:
    app: demo-app
spec:
  tls:
    termination: edge
    insecureEdgeTerminationPolicy: Redirect
  to:
    kind: Service
    name: demo-app
    weight: 100
  port:
    targetPort: http
